# code-coverage-on-crc-program

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  docker-compose.yml  dockerfile  init_all.sh  init_build.sh  init_coverage.sh  init_test.sh  jenkinsfile  jenkinsfile_html  launchCompil.sh
docker-coverage/: dockerfile  init.sh
docker/coverage/: docker-compose.yml  dockerfile
docker/jenkins/: Dockerfile  init.sh
old/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  processing.cpp  processing.h
tests/: CMakeLists.txt  main.cpp
